--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <title>SEL:DI</title>
+    <meta name="description" content="중국 수출 전문 CRM 마케팅 솔루션 SEL:DI">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
